--- a/bargain.html
+++ b/bargain.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bargaining feature</title>
+    <link rel="stylesheet" href="bargain.css">
 </head>
 <body>
     <section id="nav">
@@ -27,10 +28,7 @@
         </div>
         <div id="rating">
             <button class="num">
-                4.4
-            </button>
-            <button class="num-ratings">
-                189 ratings
+                4.4 | 189 ratings
             </button>
         </div>
         <div id="pricing">
